--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.16.0
      
   post-deployment:
     needs: deploy
